# nwaobdd

./: .gitignore  CMakeLists.txt  LICENSE  NWAOBDDInterface.cpp  NWAOBDDInterface.h  NWAOBDDRel.cpp  NWAOBDDRel.hpp  NWAOBDDRelMergeFns.cpp  NWAOBDDRelMergeFns.hpp  README.md  c6288-12_nwa.cpp  compile.sh  connection.cpp  connection.h  connectionT_impl.cpp  counter.cpp  counter.h  cross_product.h  cross_product_nwa.cpp  cross_product_nwa.h  fourier_semiring.cpp  general_map.cpp  general_map.h  linear_map.cpp  linear_map.h  main.cpp  matmult_map.h  nwaobdd.cpp  nwaobdd.h  nwaobdd_int.cpp  nwaobdd_int.h  nwaobdd_node.cpp  nwaobdd_node.h  nwaobdd_top_node.cpp  nwaobdd_top_node.h  nwaobdd_top_node_impl.cpp  pseudoCFLOBDD.cpp  pseudoCFLOBDD.h  reduction_map.cpp  reduction_map.h  (+12 more)
Traces/: c17.cpp  c432.cpp  c6288-10.cpp  c6288-10_nwa.cpp  c6288-11.cpp  c6288-12.cpp  c6288-12_nwa.cpp  c6288-8.cpp  c6288-9.cpp  c880.cpp  dartes.cpp  dlx1_c.cpp  parity.cpp  product.cpp  product2.cpp
connection/: connectionT.cpp  connectionT.h  connectionT_impl.cpp
docs/: Code Structure.md
infrastructure/: hash.cpp
matrix/: matmult_map.cpp  matmult_map.h  matrix_complex.cpp  matrix_complex.h  matrix_complex_node.cpp  matrix_complex_node.h  matrix_complex_node1.cpp  matrix_complex_node2.cpp  matrix_complex_node_ext.cpp  matrix_complex_top_node.cpp  matrix_complex_top_node.h  nwaobdd_top_node_matmult_map.cpp  nwaobdd_top_node_matmult_map.h  zero_indices_map.h
testing/: c6288-10_nwa.cpp  c6288-12_nwa.cpp  c6288-8_nwa.cpp  quantum_algos.cpp  quantum_algos.h  quantum_circuit.cpp  quantum_circuit.h  tests_nwa.cpp  tests_nwa.h  tests_nwa1.cpp  tests_nwa2.cpp  tests_nwa3.cpp  tests_nwa4.cpp
user/: NWAOBDDInterface.cpp  RelationInterface.h  fourier_semiring.h  general_map.h  matmult_map.h  vocabulary_ordering.h
vector/: vector_complex.cpp  vector_complex.h  vector_complex_top_node.cpp  vector_complex_top_node.h  vector_node.cpp  vector_node.h
